--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
             - name: Autenticar no Google Cloud
               uses: google-github-actions/auth@v2
               with:
-                  credentials_json: ${{ secrets.GCP_SA_KEY }}
+                  credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
             - name: Validar Autenticação
               run: gcloud auth list
