Remove Portuguese comment from GitHub Actions workflow
This commit removes a Portuguese comment from the top of the `main.yml` GitHub Actions workflow file. The comment, `# Nome do workflow que aparecerá no separador "Actions" do GitHub.`, described that the `name` field defines the workflow name displayed in the GitHub Actions tab. This change has no functional impact on the workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,15 +47,15 @@ jobs:
             - name: Autenticar no Google Cloud
               uses: google-github-actions/auth@v2
               with:
-                  credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
-            - name: Validar Autenticação
-              run: gcloud auth list
+                  credentials_json: ${{ secrets.GCP_SA_KEY }}
 
             - name: Configurar gcloud CLI
               uses: google-github-actions/setup-gcloud@v2
               with:
                   project_id: ${{ env.GCP_PROJECT_ID }}
+
+            - name: Validar Autenticação
+              run: gcloud auth list
 
             - name: Instalar Firebase CLI
               run: sudo npm install -g firebase-tools
