--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
             - name: Configurar Flutter SDK
               uses: subosito/flutter-action@v2
               with:
-                  flutter-version: '3.35.2' # Versão estável e testada
+                  flutter-version: '3.35.2'
                   channel: 'stable'
 
             - name: Autenticar no Google Cloud
@@ -48,22 +48,21 @@ jobs:
             - name: Instalar Firebase CLI
               run: sudo npm install -g firebase-tools
 
-            - name: Construir APKs e Executar Testes no Firebase Test Lab
+            - name: Construir APK e Executar Testes no Firebase Test Lab
               run: |
                   set -e
                   echo "==> A preparar o ambiente Flutter..."
-                  flutter clean
                   flutter pub get
-                  echo "==> A construir APKs com o Gradle..."
-                  chmod +x android/gradlew
-                  cd android
-                  ./gradlew app:assembleDebug app:assembleDebugAndroidTest
-                  cd ..
-                  echo "==> A executar testes no Firebase Test Lab..."
+                  
+                  echo "==> A construir APK de debug..."
+                  # Constrói um único APK que contém tanto a app como os testes.
+                  flutter build apk --debug
+                  
+                  echo "==> A executar testes de instrumentação no Firebase Test Lab..."
+                  # O gcloud irá extrair os testes do APK principal.
                   gcloud firebase test android run \
                     --type instrumentation \
-                    --app build/app/outputs/apk/debug/app-debug.apk \
-                    --test build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
+                    --app build/app/outputs/flutter-apk/app-debug.apk \
                     --device model=redfin,version=30,locale=pt_BR,orientation=portrait \
                     --timeout 15m \
                     --num-flaky-test-attempts 2 || \
@@ -77,7 +76,8 @@ jobs:
 
             - name: Distribuir para QA no Firebase App Distribution
               run: |
-                  firebase appdistribution:distribute build/app/outputs/apk/debug/app-debug.apk \
+                  # Usa o mesmo APK que foi testado para a distribuição.
+                  firebase appdistribution:distribute build/app/outputs/flutter-apk/app-debug.apk \
                     --app ${{ env.FIREBASE_APP_ID }} \
                     --release-notes "Build ${{ github.run_number }} - Aprovado nos testes." \
                     --groups "${{ env.FIREBASE_TESTER_GROUP }}"
