--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,84 +1,92 @@
-# Nome do workflow que aparecerá no separador "Actions" do GitHub.
-name: Flutter CI/CD para Teste e Deploy
+# Nome do Workflow que aparecerá na aba "Actions" do GitHub
+name: Flutter CI/CD - Test Lab & App Distribution
 
-# 1. GATILHO (TRIGGER)
+# Define o gatilho para a execução do workflow.
+# Neste caso, qualquer 'push' na branch 'main'.
+# Você pode ajustar para 'release/*' ou outra branch de sua preferência.
 on:
-    # Executa sempre que houver um push para o branch 'main'.
-    push:
-        branches: [ main ]
-    # Permite a execução manual a partir da UI do GitHub.
-    workflow_dispatch:
+  push:
+    branches:
+      - main
 
-# 2. VARIÁVEIS DE AMBIENTE
-env:
-    GCP_PROJECT_ID: 'test-integration-app-4e52e'
-    FIREBASE_APP_ID: '1:424599350937:android:5c7fd412fffd453bcb5208'
-    FIREBASE_TESTER_GROUP: 'qa-team'
-
-# 3. TAREFAS (JOBS)
 jobs:
-    build-test-deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout do Repositório
-              uses: actions/checkout@v4
+  # Nome do job principal
+  build_test_and_distribute:
+    # O tipo de máquina virtual que o job irá rodar
+    runs-on: ubuntu-latest
 
-            - name: Configurar Java JDK v17
-              uses: actions/setup-java@v4
-              with:
-                  distribution: 'zulu'
-                  java-version: '17'
+    steps:
+      # Passo 1: Clona o código do seu repositório para a máquina virtual
+      - name: 1. Clonar o repositório
+        uses: actions/checkout@v4
 
-            - name: Configurar Flutter SDK
-              uses: subosito/flutter-action@v2
-              with:
-                  flutter-version: '3.35.2'
-                  channel: 'stable'
+      # Passo 2: Configura o ambiente Java (necessário para a compilação Android)
+      - name: 2. Configurar o Java (JDK)
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-            - name: Autenticar no Google Cloud
-              uses: google-github-actions/auth@v2
-              with:
-                  credentials_json: ${{ secrets.GCP_SA_KEY }}
+      # Passo 3: Configura o ambiente Flutter na versão exata do seu projeto
+      - name: 3. Configurar o Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.35.2' # <- IMPORTANTE: Use a sua versão exata
+          channel: 'stable'
+          cache: true # Ativa o cache para acelerar futuras execuções
 
-            - name: Configurar gcloud CLI
-              uses: google-github-actions/setup-gcloud@v2
-              with:
-                  project_id: ${{ env.GCP_PROJECT_ID }}
+      # Passo 4: Baixa todas as dependências do projeto definidas no pubspec.yaml
+      - name: 4. Instalar dependências do Flutter
+        run: flutter pub get
 
-            - name: Instalar Firebase CLI
-              run: sudo npm install -g firebase-tools
+      # Passo 5: Compila o APK da aplicação e o APK de teste de instrumentação
+      - name: 5. Construir APK da Aplicação e de Teste
+        run: |
+          # Constrói o APK principal em modo debug (ex: build/app/outputs/apk/debug/app-debug.apk)
+          flutter build apk --debug
+          
+          # Navega para o diretório 'android' e usa o Gradle para construir o APK de teste
+          # que contém os testes de integração.
+          # (ex: build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk)
+          cd android
+          ./gradlew app:assembleAndroidTest
+          cd ..
 
-            - name: Construir APK e Executar Testes no Firebase Test Lab
-              run: |
-                  set -e
-                  echo "==> A preparar o ambiente Flutter..."
-                  flutter pub get
-                  
-                  echo "==> A construir APK de debug..."
-                  # Constrói um único APK que contém tanto a app como os testes.
-                  flutter build apk --debug
-                  
-                  echo "==> A executar testes de instrumentação no Firebase Test Lab..."
-                  # O gcloud irá extrair os testes do APK principal.
-                  gcloud firebase test android run \
-                    --type instrumentation \
-                    --app build/app/outputs/flutter-apk/app-debug.apk \
-                    --device model=redfin,version=30,locale=pt_BR,orientation=portrait \
-                    --timeout 15m \
-                    --num-flaky-test-attempts 2 || \
-                  if [ $? -eq 10 ]; then
-                    echo "Testes concluídos com instabilidade (flaky), mas a considerar como sucesso."
-                    exit 0
-                  else
-                    echo "Falha nos testes com um erro crítico."
-                    exit 1
-                  fi
+      # Passo 6: Autentica na sua conta Google Cloud usando uma chave de serviço
+      - name: 6. Autenticar com o Google Cloud
+        uses: 'google-github-actions/auth@v2'
+        with:
+          # A chave JSON da conta de serviço deve ser armazenada como um Secret no GitHub
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-            - name: Distribuir para QA no Firebase App Distribution
-              run: |
-                  # Usa o mesmo APK que foi testado para a distribuição.
-                  firebase appdistribution:distribute build/app/outputs/flutter-apk/app-debug.apk \
-                    --app ${{ env.FIREBASE_APP_ID }} \
-                    --release-notes "Build ${{ github.run_number }} - Aprovado nos testes." \
-                    --groups "${{ env.FIREBASE_TESTER_GROUP }}"
+      # Passo 7: Configura o gcloud CLI para usar o seu projeto Firebase/GCP
+      - name: 7. Configurar projeto gcloud
+        run: gcloud config set project 'test-integration-app-4e52e'
+
+      # Passo 8: Envia os APKs para o Firebase Test Lab e executa os testes
+      - name: 8. Executar testes no Firebase Test Lab
+        id: run_test_lab
+        run: |
+          gcloud firebase test android run \
+            --type instrumentation \
+            --app build/app/outputs/apk/debug/app-debug.apk \
+            --test build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
+            --device model=Pixel6,version=33,locale=pt_BR,orientation=portrait \
+            --timeout 5m # Define um tempo limite de 5 minutos para os testes
+
+      # Passo 9: Se os testes no Test Lab foram bem-sucedidos, distribui o app
+      - name: 9. Distribuir para QA via Firebase App Distribution
+        if: success() # Condição: só executa se os passos anteriores (incluindo o Test Lab) não falharem
+        uses: wzieba/Firebase-Distribution-Action@v1
+        with:
+          # ID do seu App no Firebase (encontrado nas configurações do projeto)
+          appId: '1:424599350937:android:5c7fd412fffd453bcb5208'
+          # Token de CI do Firebase
+          token: ${{ secrets.FIREBASE_TOKEN }}
+          # Grupo de testadores para quem o app será enviado
+          groups: 'qa-team'
+          # Caminho para o APK que será distribuído
+          file: build/app/outputs/apk/debug/app-debug.apk
+          # Notas da versão que aparecerão para os testadores
+          releaseNotes: "Build ${{ github.run_number }} | Testes integrados aprovados no Test Lab. Pronto para QA."
 
