--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
       # Passo 9: Distribuir para QA via Firebase App Distribution
       - name: 9. Distribuir para QA via Firebase App Distribution
         if: success()
-        uses: wzieba/firebase-distribution-action@v1.9.0 # <-- CORREÇÃO APLICADA AQUI
+        uses: wzieba/firebase-distribution-action@v1.9.0 # <-- O NOME CORRETO É TUDO EM MINÚSCULAS
         with:
           appId: '1:424599350937:android:5c7fd412fffd453bcb5208'
           token: ${{ secrets.FIREBASE_TOKEN }}
