--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       - name: 6. Autenticar com o Google Cloud
         uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}'
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
       # Passo 7: Configurar projeto gcloud
       - name: 7. Configurar projeto gcloud
