--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,13 +64,18 @@ jobs:
             --device model=Pixel6,version=33,locale=pt_BR,orientation=portrait \
             --timeout 5m
 
-      # Passo 9: Distribuir para QA via Firebase App Distribution
+      # Passo 8a: Instalar as ferramentas da CLI do Firebase
+      - name: 8a. Instalar Firebase CLI Tools
+        run: npm install -g firebase-tools
+
+      # Passo 9: Distribuir para QA via Firebase App Distribution com a CLI
       - name: 9. Distribuir para QA via Firebase App Distribution
         if: success()
-        uses: firebase/firebase-app-distribution@v1 # <-- CORREÇÃO: Usando a ação oficial do Firebase
-        with:
-          appId: '1:424599350937:android:5c7fd412fffd453bcb5208'
-          token: ${{ secrets.FIREBASE_TOKEN }}
-          testers: 'qa-team' # <-- MUDANÇA: O parâmetro 'groups' agora é 'testers'
-          file: build/app/outputs/apk/debug/app-debug.apk
-          releaseNotes: "Build ${{ github.run_number }} | Testes integrados aprovados no Test Lab. Pronto para QA."
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: |
+          firebase appdistribution:distribute build/app/outputs/apk/debug/app-debug.apk \
+            --app "1:424599350937:android:5c7fd412fffd453bcb5208" \
+            --release-notes "Build ${{ github.run_number }} | Testes integrados aprovados no Test Lab. Pronto para QA." \
+            --groups "qa-team"
+
