--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
             --type instrumentation \
             --app build/app/outputs/apk/debug/app-debug.apk \
             --test build/app/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
-            --device model=Pixel6,version=33,locale=pt_BR,orientation=portrait \
+            --device model=pixel10,version=33,locale=pt_BR,orientation=portrait \
             --timeout 5m
 
       # Passo 8a: Instalar as ferramentas da CLI do Firebase
