--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
       - name: 4a. Criar o ficheiro google-services.json a partir do Secret
         run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > android/app/google-services.json
 
+      - name: 4b. Verificar a criação do ficheiro google-services.json
+        run: ls -l android/app
+
       - name: 5. Construir APKs (app e teste)
         run: |
           flutter build apk --debug
