--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,17 @@ jobs:
 
       - name: 5. Construir APKs (app e teste)
         run: |
-          # Limpa e constrói o APK da app. Este passo gera o ficheiro gradlew.
+          # Limpa e constrói o APK da app.
           flutter clean
           flutter build apk --debug
           
-          # Agora, entra na pasta android, dá permissão e constrói o APK de teste.
+          # Entra na pasta android, dá permissão e constrói o APK de teste.
           cd android
           chmod +x ./gradlew
           ./gradlew app:assembleAndroidTest
+          
+          # IMPORTANTE: Volta para o diretório raiz para os próximos passos.
+          cd ..
 
       - name: 6. Autenticar com o Google Cloud
         uses: google-github-actions/auth@v2
@@ -53,7 +56,7 @@ jobs:
         run: |
           gcloud firebase test android run \
             --type instrumentation \
-            --app build/app/outputs/apk/debug/app-debug.apk \
+            --app build/app/outputs/flutter-apk/app-debug.apk \
             --test android/app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
             --device model=akita,version=34 \
             --timeout 5m
@@ -64,7 +67,7 @@ jobs:
       - name: 9. Distribuir para QA via Firebase App Distribution
         if: success()
         run: |
-          firebase appdistribution:distribute build/app/outputs/apk/debug/app-debug.apk \
+          firebase appdistribution:distribute build/app/outputs/flutter-apk/app-debug.apk \
             --app "1:424599350937:android:5c7fd412fffd453bcb5208" \
             --release-notes "Build do CI" \
             --groups "qa-team" \
