--- a/.github/workflows/flutter_test_deploy.yml
+++ b/.github/workflows/flutter_test_deploy.yml
@@ -51,9 +51,6 @@ jobs:
           # Encontra o APK de teste em qualquer subpasta do projeto e move-o.
           find . -name "app-debug-androidTest.apk" -exec mv {} artifacts/app-debug-androidTest.apk \;
 
-      - name: 5a. Verificar Artefactos
-        run: ls -l artifacts/
-
       - name: 6. Autenticar com o Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -70,7 +67,8 @@ jobs:
             --test artifacts/app-debug-androidTest.apk \
             --device model=akita,version=34 \
             --timeout 5m \
-            --use-orchestrator
+            --use-orchestrator \
+            --test-targets "class com.test_integration.test_integration_app.MainActivity"
 
       - name: 8a. Instalar Firebase CLI Tools
         run: npm install -g firebase-tools
