--- a/.github/workflows/flutter_test_deploy.yml
+++ b/.github/workflows/flutter_test_deploy.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build_test_and_distribute:
     runs-on: ubuntu-latest
+    # Aumenta o tempo limite total do job para 30 minutos para evitar que ele seja cancelado
+    timeout-minutes: 30
     steps:
       - name: 1. Clonar o repositório
         uses: actions/checkout@v4
@@ -65,9 +67,7 @@ jobs:
             --type instrumentation \
             --app artifacts/app-debug.apk \
             --test artifacts/app-debug-androidTest.apk \
-            --device model=akita,version=34 \
-            --timeout 5m \
-            --use-orchestrator \
+            --device model=Medium.phone.arm,version=34,locale=en,orientation=portrait \
             --test-targets "class com.test_integration.test_integration_app.app_test"
 
       - name: 8a. Instalar Firebase CLI Tools
