--- a/.github/workflows/flutter_test_deploy.yml
+++ b/.github/workflows/flutter_test_deploy.yml
@@ -68,7 +68,7 @@ jobs:
             --app artifacts/app-debug.apk \
             --test artifacts/app-debug-androidTest.apk \
             --device model=caiman,version=34 \
-            --test-targets "class com.test_integration.test_integration_app.app_test"
+            --test-targets "class com.test_integration.test_integration_app.MainActivityTest"
 
       - name: 8a. Instalar Firebase CLI Tools
         run: npm install -g firebase-tools
