--- a/.github/workflows/flutter_test_deploy.yml
+++ b/.github/workflows/flutter_test_deploy.yml
@@ -34,24 +34,13 @@ jobs:
 
       - name: 5. Construir e Mover APKs
         run: |
-          # Limpa e constrói o APK da app.
           flutter clean
           flutter build apk --debug
+          flutter build apk --debug --target integration_test/app_test.dart
           
-          # Entra na pasta android, dá permissão e constrói o APK de teste.
-          cd android
-          chmod +x ./gradlew
-          ./gradlew app:assembleAndroidTest
-          cd ..
-
-          # Cria um diretório para os artefactos.
           mkdir -p artifacts
-          
-          # Move o APK da aplicação.
           mv build/app/outputs/flutter-apk/app-debug.apk artifacts/app-debug.apk
-          
-          # Encontra o APK de teste em qualquer subpasta do projeto e move-o.
-          find . -name "app-debug-androidTest.apk" -exec mv {} artifacts/app-debug-androidTest.apk \;
+          mv build/app/outputs/apk/debug/app-debug-androidTest.apk artifacts/app-debug-androidTest.apk
 
       - name: 6. Autenticar com o Google Cloud
         uses: google-github-actions/auth@v2
@@ -68,7 +57,7 @@ jobs:
             --app artifacts/app-debug.apk \
             --test artifacts/app-debug-androidTest.apk \
             --device model=caiman,version=34 \
-            --test-targets "class com.test_integration.test_integration_app.MainActivityTest"
+            --use-orchestrator
 
       - name: 8a. Instalar Firebase CLI Tools
         run: npm install -g firebase-tools
